# bikeshare-to

./: README.md  pyproject.toml
docs/: bike-share-methodology-2022-10-14.md  bike-share-toronto-data-cleaning-2023-01-10.md  bike-share-toronto-data-dictionary-2022-12-29.md  bike-share-toronto-data-profiling-2022-12-29.md  bike-share-toronto-data-profling.md
docs/dev-log/: bike-share-dev-log-2022-09-10.md  bike-share-dev-log-2022-09-13.md  bike-share-dev-log-2022-09-15.md  bike-share-dev-log-2022-09-16.md  bike-share-dev-log-2022-09-19.md  bike-share-dev-log-2022-10-06.md  bike-share-dev-log-2022-10-07.md  bike-share-dev-log-2022-10-10.md  bike-share-dev-log-2022-10-11.md  (+39 more)
notebooks/: 2017-2018_start_time_visualization.ipynb  bst-data-profiling-stations-20230124.ipynb
src/: 2017-2018_preprocessing.sql  bike-share-batch-load.sh  bike-share-cleaning-2017-2018.sql  bike-share-initialize-trips-table.sql  bike-share-load-2019-2022.sql  bike-share-profiling-2020-10.sql  bike-share-toronto-trips-cleaning-2023-01-10.sql  bike-share-toronto-trips-profiling-2022-12-29.sql  bike-share-trips-profiling.sql  bikeshare_setup.sql  bst-batch-load-csv-20230307  bst-init-raw-tables-20230307.sql  bst-init-stations-table.sql  bst-init-trips-raw-20230313.sql  bst-profile-trips-20230202.sql  bst-trips-preprocessing-prod-20230306.sql  bst.sql  clean_filenames.sh  load-csv-2017-2018.sh  load-csv-2019-2022.sh  load-transform_2017-2018.sql  load_csv.sh  profiling_cleaning_2017-2018.sql  raw_2019_2020_profiling.sql  transfer_load.sql  transform-load-2022-12-22.sql  trips.sql
(+14 files in other folders)
